--- a/event/event.tex
+++ b/event/event.tex
@@ -13,34 +13,32 @@
   \tableofcontents\newpage
   
   \chapter{Summary}
-      Introduction to NSUT and WEB3 concept , definitions, and advantages.\\\\
-      Introduction to GIRLSCRIPT.TECH.\\\\
-      Introduction to NSUT IIF and their collaboration with GIRLSCRIPT.TECH.\\\\
-      Introduction to WEB3CAMP.\\\\ 
-  \chapter{WEB3CAMP} This year , we are back with the Web3bootcamp. This has been an ongoing event since the last few years, but due to covid, we had to conduct it online and this year, we are back with an offline one in a long time!\\\\
-      When we learn coding, we always learn the common languages like C++ , Java, js, Html etc , but we don't bother learning the newer languages and that is what we need to try because of the low risk high reward structure of the activity\\\\
-
-  \chapter{Speaker 1 - Mr. Lakshay Gupta (Unravelling the WEB3 Marvel!)} 
+      \section{NSUT and WEB3}
+        \textbf{Netaji Subhas University of Technology (NSUT)}, located in Delhi, stands as a prestigious technical institute in India. Nestled in the heart of the capital, its main campus exudes an atmosphere of academic brilliance and innovation. Boasting state-of-the-art facilities, NSUT offers a diverse range of engineering and technological programs. With a rich legacy of academic excellence and a vibrant student community, NSUT's main campus serves as a hub for fostering cutting-edge research and nurturing future leaders in the field of technology.\\\\
+        \textbf{Web3} represents the next evolutionary phase of the internet, leveraging decentralized technologies like \textbf{blockchain} to create a more \textbf{transparent}, \textbf{secure}, and \textbf{interconnected} online ecosystem. Unlike its predecessor, Web2, Web3 empowers users by granting them greater control over their data and digital interactions. Through \textbf{decentralized applications} (DApps) and \textbf{smart contracts}, Web3 aims to revolutionize various sectors, including finance, governance, and entertainment, promising a future where individuals have increased autonomy and ownership within the digital realm.\\\\
+      \section{WEB3BOOTCAMP} 
+       Today, \textbf{NSUT IIF} and \textbf{Girlscript.Tech} have collaborated to provide us with this extremely helpful BootCamp event in which we will learn many basics about web3 including tokens, blocks, structures, benefits, and some important applications.\\
+    
+   \chapter{Speaker 1 - Unravelling the WEB3 Marvel!} 
       \section{Evolution and Summary of Web3} 
           First word coming to mind when thinking about Web3? Blockchain? Decentralised Apps? AI? NFTs?\\\\
           Web1.0 was like reading a book, Web2 was like writing in a book, and Web3 is like having the book write back to you and even collaborating on new chapters.\\\\ 
           But what does this all mean?\\\\ 
-          Web3 is actually decentralised which means there is no central person with power concentraton. Basiclaly decentralisation means the distribution of control/power to a network of people/groups.\\\\ 
-          Blockchain works on a structure of data and hashes.\\\\ 
-          Decentralised applications are the apps which run on decentralised infrastructure , utilising smart contracts, to eecute fuctions without centralised controls, fostering trust and transparency.\\\\
-          Decentralised finance (DeFi) seeks to provide financial services without the need for traditional intermediaries like banks or brokerage.\\\\ 
+          Web3's hallmark feature is its \textbf{decentralization}, a stark departure from the centralized structure of Web2. This innovative framework utilizes \textbf{distributed ledger technology} such as blockchain to remove reliance on single authorities or intermediaries. By decentralizing data storage and processing, Web3 ensures \textbf{transparency}, \textbf{security}, and \textbf{resilience} across digital networks. Users gain greater control over their information and transactions, fostering a more democratic online environment. This decentralized model, through \textbf{peer-to-peer} interactions and consensus mechanisms, aims to create a trustworthy and inclusive digital landscape, disrupting traditional centralized systems.\\\\
+          \textbf{Blockchain} works on a structure of data and hashes.\\\\ 
+          \textbf{Decentralised applications (DApps)} are the apps which run on decentralised infrastructure , utilising smart contracts, to eecute fuctions without centralised controls, fostering trust and transparency.\\\\
+          \textbf{Decentralised finance (DeFi)} seeks to provide financial services without the need for traditional intermediaries like banks or brokerage.\\\\ 
 
       \section{Need Of Web3} 
-          Web2 platforms are predominantly centralised and controlled by a few powerful entities, which causes central data storage, data selling, leaks etc.\\\\ 
-          Blockchain Technology enables a shift towards user cetnric monopoly of central authority.\\\\ 
+          Web2 platforms are predominantly \textbf{centralised}. Under the centralized framework of Web2, the control and management of \textbf{data} gravitate toward a select few corporations and centralized entities. This concentration of power results in a myriad of \textbf{data privacy} challenges. Users' personal information is amassed extensively without transparent \textbf{consent}, leading to potential \textbf{privacy breaches} and exploitation. Centralized systems lack \textbf{robustness}, making user data susceptible to breaches, unauthorized access, and manipulation. Moreover, the dominance of a few entities in controlling data creates an environment where \textbf{innovation} is stifled, and user choices are influenced, impacting \textbf{competition} and diversity. The inherent centralization within Web2 exacerbates the vulnerability of data privacy, underscoring the urgency for a \textbf{decentralized} paradigm shift that prioritizes user empowerment and privacy protection.\\\\
           Web2 has faced numerous provacy scandals where user data was exploited without consent/transparency.\\\\
           Web3 solves this throught the decentralised networks and enhanced security.\\\\
           the next problem we face is the lack of user empowerment and monetization\\\\
 
           Web3 solves this through tokenization and DeFi models to enable content creators to monetize their work directly.\\\\
-          NFTs also offer new avenues for creators to earn from their digital assets.\\\\
+          \textbf{NFTs} also offer new avenues for creators to earn from their digital assets.\\\\
 
-          The next problem is Trust/Transparency, which Web3 aims to solve by utilising blockchain's immutability and transcparency\\\\
+          The next problem is \textbf{Trust/Transparency}, which Web3 aims to solve by utilising blockchain's immutability and transcparency\\\\
 
           But here comes a plot twist!!\\\\
 
@@ -65,31 +63,30 @@
 
         \end{itemize}
       \section{Feedbacks} Don't forget to send Feedback out way!\\\\ 
-\chapter{Speaker 2 - Introduction to Blockchain Technology} What is a blockchain? Its a Block , and a Chain.\\\\ 
-There is a block - it contains a block header, Transactions, and Block Hash. Block header contains the adress of the sender and reciever of the data, which is contained in the transaction. Every transation generates a new block , and each block is connected to the next and previous block.\\\\ 
+\chapter{Speaker 2 - Introduction to \textbf{Blockchain} Technology} What is a Blockchain? Its a Block , and a Chain.\\\\ 
+There is a \textbf{Block} - it contains a \textbf{block header}, \textbf{Transactions}, and \textbf{Block Hash}. Block header contains the adress of the sender and reciever of the data, which is contained in the transaction. Every transation generates a new block , and each block is connected to the next and previous block.\\\\ 
 we will visit hashing later\\\\ 
 	\section{Core Principles} Decentralisation, Distibuted Ledger, Consensus mechanism , cryptographic hash function and many more advantages.\\\\ 
-		The problem with centralisation is that the central authority can be corrupted as seen with the example of Nirav Modi who ran off with 11 thousand crores from PNB.\\\\ 
+        The problem with centralisation is that the central authority can be corrupted as seen with the example of Nirav Modi who ran off with \textbf{11 Thousand Crores} from \textbf{PNB}.\\\\ 
 		Decentralisation is like 4 people creating a ledger together after fucking the central authority to the moon. Every time person 1 gives or takes money to person 2 , the write that down in the ledger.\\\\ 
 		The problem here is that p1 can just write I gave x amount of money to p2 without even having that x amount on him. Usually the central authority would verify it , but now , with decentralised system , everyone can see the transaction and majority approval can make the transaction legal and valid. This is called decentralised consensus.\\\\ 
-		The hash function takes in an argument and assigns a code to the name which is pretty much untracable because even a slight change in the name changes the code by a lot. Basically, secure serialisation.\\\\ 
-		Decentralised systems have the inherent advantage of transparency because we can see the transactions, but we can not at the same time see the profiles and the data of the sender and reciever providing the much needed anonymity.\\\\ 
-		Decentralised systems are very immutable because no one can change the data which is once registered on the blockchain , except the registrar himself.\\\\
+        The \textbf{Hash Function} takes in an argument and assigns a code to the name which is pretty much untracable because even a slight change in the name changes the code by a lot. Basically, secure \textbf{serialisation}.\\\\ 
+        \textbf{Decentralised systems} have the inherent advantage of \textbf{Transparency} because we can see the transactions, but we can not at the same time see the profiles and the data of the sender and reciever providing the much needed anonymity.\\\\ 
+        Decentralised systems are very \textbf{immutable} because no one can change the data which is once registered on the blockchain , except the registrar himself.\\\\
 
 
       \section{How Bitcoin functions}
-          First step is a Transaction Request. A Transaction request is created which triggers a block to be created with the specified header, transaction , and hash. This Block is then sent to every node in the network, where it is approved by majority to be valid, after that is done, the block is officially added to the blockchain and the transaction is finally complete.\\\\
+          First step is a \textbf{Transaction Request}. A Transaction request is created which triggers a block to be created with the specified header, transaction , and hash. This Block is then sent to every node in the network, where it is approved by majority to be \textbf{validated}, after that is done, the block is officially added to the blockchain and the transaction is finally complete.\\\\
+          After the Block has been added, the registrar also gets the rest of the formalities like POAPS and POW etc.\\
 
 
-  \chapter{Speaker3 - Introduction to DeFi and Use Cases}
-      DeFi (Decentralised Finance) is like having an economy over the blockchain which aims to eliminat ethe intermediaries like banks and brokers etc and move the art of transactions peer to peer.
+  \chapter{Speaker 3 - Introduction to DeFi and Use Cases}
+      \textbf{DeFi} (Decentralised Finance) is like having an economy over the blockchain which aims to eliminat ethe intermediaries like banks and brokers etc and move the art of transactions peer to peer.
       DeFi is open , permissionless, and transparent, which are one of its greatest advantages.\\\\
       DeFi works on 2 concepts - blockchain , and Smart contracts.
 
       \section{Smart Contracts - The Basics}
-          Smart Contracts are basically self executing pieces of code which automates and enforces the terms of a standardised contract on the transactions on question without the need of any intermediary.\\\\
-          Smart Contracts are autonomous, we don't have to trust a 3rd party for framing the contract, and it is also very efficient on the workforce, cost , capital , and time.
-      
+          Smart contracts play a pivotal role in the realm of Decentralized Finance (DeFi) within the Web3 ecosystem. These \textbf{self-executing contracts}, built on blockchain platforms like Ethereum, enable \textbf{automated} and \textbf{trustless} transactions, eliminating the need for intermediaries. In DeFi, smart contracts facilitate various financial services, including lending, borrowing, and decentralized exchanges. Through predefined rules and code, these contracts ensure \textbf{security} and \textbf{transparency} while executing transactions without the need for manual intervention. By enabling programmable agreements, smart contracts form the backbone of DeFi protocols, revolutionizing the traditional financial landscape by offering accessibility and efficiency to a broader range of users globally.\\
       \section{Use Cases of the DeFi}
           \begin{itemize}
             \item Decentralised Exchanges
